--- a/ComSemApp/templates/ComSemApp/corpus/corpus_search_new.html
+++ b/ComSemApp/templates/ComSemApp/corpus/corpus_search_new.html
@@ -19,7 +19,6 @@ author: Trevor Greenside
 </div>
 
 <!-- search criteria -->
-<form>
 <div class="row">
 
 	<!-- left most column -->
@@ -27,7 +26,7 @@ author: Trevor Greenside
 
 		<!-- Space for user to enter the first word, mandatory -->
 		<div class="form-group">
-			<label for="new_word">Load Word</label>
+			<label for="word1">Load Word</label>
 			<input type="text" class="form-control input-sm" id="word1" name="word1" placeholder="Type a word to search">
 		</div>
 		<!-- Space for user to select a part of speech tag for word 1 -->
@@ -90,10 +89,6 @@ author: Trevor Greenside
 <!-- results -->
 <br />
 
-<form onSubmit="JavaScript:clickButton()">
-	<input type="submit" name="firstButton" id="firstButton" value="Click me!" />
-</form>
-
 <div class="row">
 	<div class="col-md-12">
         <div class="card-box" id="searchResults" style="display: none"></div>
@@ -105,21 +100,12 @@ author: Trevor Greenside
 		document.getElementById('textInput').value=val; // Maybe change to "none" if val is 0?
 	}
 
-	function clickButton() {
-		alert("Button clicked");
-	}
-
-	$("word1").change(function(e) {
-		e.preventDefault();
-		alert("The value has been changed");
+	$(document).ready(function() {
+		$("word1").on("change paste keyup", function() {
+			// e.preventDefault();
+			alert("The value has been changed");
+		});
 	});
-
-	// $(document).ready(function() {
-	// 	$("firstButton").click(function(e) {
-	// 		e.preventDefault();
-	// 		alert("The button has been clicked");
-	// 	});
-	// });
 
 
 </script>
