--- a/ComSemApp/templates/ComSemApp/corpus/corpus_search_new.html
+++ b/ComSemApp/templates/ComSemApp/corpus/corpus_search_new.html
@@ -22,16 +22,16 @@ author: Trevor Greenside
 <div class="row">
 
 	<!-- left most column -->
-	<div class="col-lg-3">
+	<div class="col-lg-4">
 
 		<!-- Space for user to enter the first word, mandatory -->
 		<div class="form-group">
-			<label for="word1">Load Word</label>
+			<label for="word1">Enter a Word</label>
 			<input type="text" class="form-control input-sm" id="word1" name="word1" placeholder="Type a word to search">
 		</div>
 		<!-- Space for user to select a part of speech tag for word 1 -->
 		<div class="form-group">
-			<label for="new_tag">Load part-of-speech tag</label>
+			<label for="new_tag">Select Part-of-Speech Tag</label>
 			<select class="form-control input-sm" id="new_tag" name="new_tag">
 				<option selected="selected" value="ALL">Full Tagset</option>
 				{% for tag in tags %}
@@ -43,14 +43,14 @@ author: Trevor Greenside
 	</div>
 
 	<!-- middle column -->
-	<div class="col-lg-3">
+	<div class="col-lg-4">
 		<div class="form-group">
-			<label for="new_word">Load Second Word (Optional)</label>
+			<label for="new_word">Enter a Second Word (Optional)</label>
 			<input type="text" class="form-control input-sm" id="word2" name="word2" placeholder="Type another word (optional)">
 		</div>
 		<!-- Space for user to enter the second word, optional. Will not be processed if blank -->
 		<div class="form-group">
-			<label for="new_tag">Load part-of-speech tag</label>
+			<label for="new_tag">Select Part-of-Speech Tag</label>
 			<select class="form-control input-sm" id="new_tag" name="new_tag">
 				<option selected="selected" value="ALL">Full Tagset</option>
 				{% for tag in tags %}
@@ -68,10 +68,19 @@ author: Trevor Greenside
 		    <span>Search <i class="ti-angle-right"></i></span>
 		</button>
 
-		<br><br>
+		<br><br><br>
 		<!-- user specifies offset for the corpus search -->
-		<label for="newOffset">Offset</label>
-		<input class="form-control input-sm" type="number" min="-5" max="8" value="1" id="newOffset" name="addOffset">
+		<label for="newOffset">Select Offset</label>
+		<select id="newOffset" name="addOffset">
+			{% for i in offsetRange %}
+				{% if i == 0 %}
+					<option value="{{ i }}" selected>{{ i }}</option>
+				{% else %}
+					<option value="{{ i }}" >{{ i }}</option>
+				{% endif %}
+			{% endfor %}
+		</select>
+		<!-- <input class="form-control input-sm" type="number" min="-5" max="8" value="1" id="newOffset" name="addOffset"> -->
 		<!--
 		<input class="form-control input-sm" type="range" min="-5" max="5" value="0" id="newOffset"
 			name="addOffset" step="1" list="steplist" onchange="updateTextInput(this.value);">
@@ -100,11 +109,25 @@ author: Trevor Greenside
 		document.getElementById('textInput').value=val; // Maybe change to "none" if val is 0?
 	}
 
+	function placeHolderFunction() {
+		alert("THing running");
+	}
+
+	// progressTimeout tracks whether a timeout function is in progress.
+	var progressTimeout = null;
+
 	$(document).ready(function() {
-		$("word1").on("change paste keyup", function() {
-			// e.preventDefault();
-			alert("The value has been changed");
+		$("#word1").on("keydown paste", function() {
+			if (progressTimeout) {
+				clearTimeout(progressTimeout);
+			}
+			progressTimeout = setTimeout(placeHolderFunction, 500);
 		});
+
+		/* save setTimeout to a variable outside of this function. Use that to
+		cancel previously called function. Google the hell out of this, find
+		examples. Something else to search for: look at things like search completion
+		or search suggestions. Loads suggested past searches, for example. */
 	});
 
 
