--- a/ComSemApp/templates/ComSemApp/corpus/corpus_search_new.html
+++ b/ComSemApp/templates/ComSemApp/corpus/corpus_search_new.html
@@ -105,24 +105,30 @@ note: Tags are here: http://ucrel.lancs.ac.uk/claws5tags.html
 
 <script>
 
-	var searchCriteria = [];
-
+	/*
+	This function returns as a string the value in an HTML input above.
+	*/
 	function updateTextInput(val) {
 		document.getElementById('textInput').value=val; // Maybe change to "none" if val is 0?
 	}
 
+	/*
+	This function takes a word entry field and the field to outout Ajax results,
+	sends the word to the backend to retrieve tags for it, and populates a
+	field with check boxes for each retruned POS tag.
+	*/
 	function getWordPosTags(wordEntryField, resultField) {
 
 		var val = $(wordEntryField).val();
 		var type = 'word';
-		if (val == "") {
+		if (val == "") { // user enters nothing, clear field and return
 			$(resultField).empty();
 			$(resultField).html("<p>Please enter a word.</p>");
 			return;
 		}
 
-		$(resultField).empty();
-		$.ajax({
+		$(resultField).empty(); // clear the result field, prep for new results
+		$.ajax({ // call function to retrieve data and write it to this view
 			type: "POST",
 			url: "{% url 'corpus:populate_word_tag' %}",
 			data: {
@@ -144,6 +150,9 @@ note: Tags are here: http://ucrel.lancs.ac.uk/claws5tags.html
 	// progressTimeout tracks whether a timeout function is in progress.
 	var progressTimeout = null;
 
+	/*
+	Event listeners for components in this view.
+	*/
 	$(document).ready(function() {
 		$("#word1").on("keydown paste", function() {
 			if (progressTimeout) {
@@ -160,11 +169,6 @@ note: Tags are here: http://ucrel.lancs.ac.uk/claws5tags.html
 		});
 	});
 
-
 </script>
-
-<style>
-
-</style>
 
 {% endblock %}
