--- a/ComSemApp/templates/ComSemApp/sidebar.html
+++ b/ComSemApp/templates/ComSemApp/sidebar.html
@@ -169,6 +169,12 @@
 							</a>
 						</li>
 						<li>
+							<a href="http://localhost:8000/administrator/">
+								<i class="ion-android-book ion-sm"></i>
+								<span>Discussion Board</span>
+							</a>
+						</li>
+						<li>
 							<a href="{% url 'administrator:course_types' %}">
 								<i class="ion-ios7-cog ion"></i>
 								<span>Course Types</span>
@@ -205,12 +211,6 @@
 							<a href="{% url 'teacher:courses' %}">
 								<i class="ti-blackboard"></i>
 								<span>Courses</span>
-							</a>
-						</li>
-						<li>
-							<a href="{% url 'discussion_board' %}">
-								<i class="ti-blackboard"></i>
-								<span>Discussion_board</span>
 							</a>
 						</li>
 						<li class="has_sub">
