--- a/ComSemApp/templates/ComSemApp/sidebar.html
+++ b/ComSemApp/templates/ComSemApp/sidebar.html
@@ -169,7 +169,7 @@
 							</a>
 						</li>
 						<li>
-							<a href="http://localhost:8000/administrator/">
+							<a href="http://localhost:8000/discussion_board">
 								<i class="ti-blackboard"></i>
 								<span>Discussion_board</span>
 							</a>
