--- a/ComSemApp/templates/ComSemApp/sidebar.html
+++ b/ComSemApp/templates/ComSemApp/sidebar.html
@@ -171,7 +171,7 @@
 						<li>
 							<a href="http://localhost:8000/discussion_board">
 								<i class="ti-blackboard"></i>
-								<span>Discussion_board</span>
+								<span>Discussion Board</span>
 							</a>
 						</li>
 						<li>
