--- a/ComSemApp/templates/ComSemApp/sidebar.html
+++ b/ComSemApp/templates/ComSemApp/sidebar.html
@@ -175,6 +175,12 @@
 							</a>
 						</li>
 						<li>
+								<a href="http://localhost:8000/discussion_board">
+									<i class="ti-blackboard"></i>
+									<span>Discussion Board</span>
+								</a>
+							</li>
+						<li>
 							<a href="{% url 'administrator:sessions' %}">
 								<i class="ion-calendar ion-sm"></i>
 								<span>Sessions</span>
