Got Reply Box Frontend up
why do databases hate me

--- a/ComSemApp/templates/ComSemApp/discussionBoard/reply_page.html
+++ b/ComSemApp/templates/ComSemApp/discussionBoard/reply_page.html
@@ -31,6 +31,9 @@
             <p>No available replies</p>
         {% endif %}
     </div>
+    <div>
+        {% include 'ComSemApp/discussionBoard/create_reply.html' %}
+    </div>
 </div>
 
 {% endblock %}
