Fixed Radding reply to the discussion board

--- a/ComSemApp/templates/ComSemApp/discussionBoard/create_reply.html
+++ b/ComSemApp/templates/ComSemApp/discussionBoard/create_reply.html
@@ -20,9 +20,10 @@ $("#saveReply").click(function(e){
     // because of audio, we must send a formdata object
     var replyFormData = new FormData();
     replyFormData.append( 'message', $("#comment").val() );
+    
 
     $.ajax({
-        type: "Get",
+        type: "POST",
         url: $("#create_or_update_url").val(),
         data: replyFormData,
         processData: false,
