Fixed discussion board bugs
system is fully functional minus the like-dislike system

--- a/ComSemApp/templates/ComSemApp/sidebar.html
+++ b/ComSemApp/templates/ComSemApp/sidebar.html
@@ -201,7 +201,7 @@
 					</ul>
 					<ul>
 						<li>
-							<a href="{% url 'admin:discussion_board' %}">
+							<a href="{% url 'admin:admin_discussion_board' %}">
 								<i class="ti-blackboard"></i>
 								<span>Discussion Board</span>
 							</a>
@@ -229,7 +229,7 @@
 					</ul>
 					<ul>
 						<li>
-							<a href="{% url 'teacher:discussion_board' %}">
+							<a href="{% url 'teacher:teacher_discussion_board' %}">
 								<i class="ti-blackboard"></i>
 								<span>Discussion Board</span>
 							</a>
@@ -246,7 +246,7 @@
 					</ul>
 					<ul>
 						<li>
-							<a href="{% url 'student:discussion_board' %}">
+							<a href="{% url 'student:student_discussion_board' %}">
 								<i class="ti-blackboard"></i>
 								<span>Discussion Board</span>
 							</a>
