--- a/ComSemApp/templates/ComSemApp/discussionBoard/topic_list.html
+++ b/ComSemApp/templates/ComSemApp/discussionBoard/topic_list.html
@@ -10,15 +10,15 @@
         <div class="col-md-6">
             {% if current_role %}
                 {% if current_role == "teacher" %}
-                    <a class="btn btn-sm btn-outline-info pull-right" href="{% url 'teacher:create_topic' %}">
+                    <a class="btn btn-sm btn-outline-info pull-right" href="{% url 'teacher:teacher_create_topic' %}">
                         <i class="fa fa-plus"></i>
                     </a>
                 {% elif current_role == "admin" %}
-                    <a class="btn btn-sm btn-outline-info pull-right" href="{% url 'admin:create_topic' %}">
+                    <a class="btn btn-sm btn-outline-info pull-right" href="{% url 'admin:admin_create_topic' %}">
                         <i class="fa fa-plus"></i>
                     </a>
                 {% elif current_role == "student" %}
-                    <a class="btn btn-sm btn-outline-info pull-right" href="{% url 'student:create_topic' %}">
+                    <a class="btn btn-sm btn-outline-info pull-right" href="{% url 'student:student_create_topic' %}">
                         <i class="fa fa-plus"></i>
                     </a>
                 {% endif %}
@@ -44,11 +44,11 @@
                     <td>
                         {% if current_role %}
                             {% if current_role == "teacher" %}
-                                <a href="{% url 'teacher:topic' topic.id %}" class="btn btn-sm btn-outline-primary">Go To Thread</a>
+                                <a href="{% url 'teacher:teacher_topic' topic.id %}" class="btn btn-sm btn-outline-primary">Go To Thread</a>
                             {% elif current_role == "admin" %}
-                                <a href="{% url 'admin:topic' topic.id %}" class="btn btn-sm btn-outline-primary">Go To Thread</a>
+                                <a href="{% url 'admin:admin_topic' topic.id %}" class="btn btn-sm btn-outline-primary">Go To Thread</a>
                             {% elif current_role == "student" %}
-                                <a href="{% url 'student:topic' topic.id %}" class="btn btn-sm btn-outline-primary">Go To Thread</a>
+                                <a href="{% url 'student:student_topic' topic.id %}" class="btn btn-sm btn-outline-primary">Go To Thread</a>
                             {% endif %}
                         {% endif %}		
                     </td>
