--- a/ComSemApp/templates/ComSemApp/discussionBoard/topic_list.html
+++ b/ComSemApp/templates/ComSemApp/discussionBoard/topic_list.html
@@ -26,7 +26,7 @@
         </div>
     </div>
 
-    <div class = "row mt-2">
+    <div class = "row mt-3 cs-admin-table">
         {% if topics %}
         <table class="table table-hover tablesorter">
             <thead>
