Added Dyslexic Font
Added A button to switch to and from Dyslexic font

--- a/ComSemApp/templates/ComSemApp/sidebar.html
+++ b/ComSemApp/templates/ComSemApp/sidebar.html
@@ -1,7 +1,7 @@
 {% extends 'ComSemApp/base.html' %}
 
 {% block body %}
-<body class="fixed-left">
+<body id="main_body" class="fixed-left">
 
 	<!-- Begin page -->
 	<div id="wrapper">
@@ -113,6 +113,10 @@
 
 							<a href="{% url 'logout' %}" class="dropdown-item notify-item">
 								<i class="mdi mdi-logout"></i> <span>Logout</span>
+							</a>
+
+							<a class="dropdown-item notify-item" id="dyslexic_button">
+								<span>This is an Error</span>
 							</a>
 						</div>
 					</li>
@@ -261,7 +265,7 @@
 		<!-- Left Sidebar End -->
 
 
-		<div class="content-page" style="{% if not current_role %}margin-left: 0px{% endif %}">
+		<div class="content-page" style="{% if not current_role %}margin-left: 0px{% endif %}">j
 
 			<!-- Start content -->
 			<div class="content">
@@ -275,5 +279,25 @@
 
 
 </body>
+<script>
+var isDyslexic = false
+if(isDyslexic){
+	document.getElementById("dyslexic_button").innerHTML = "Switch to Normal Font";
+
+}else{
+	document.getElementById("dyslexic_button").innerHTML = "Switch to Dyslexic Font";
+}
+$('#dyslexic_button').click(function(){
+	isDyslexic = !isDyslexic;
+	if(isDyslexic){
+		$('#main_body').css('font-family','Open-Dyslexic');
+		document.getElementById("dyslexic_button").innerHTML = "Switch to Normal Font";
+
+	}else{
+		$('#main_body').css('font-family', 'Arial');
+		document.getElementById("dyslexic_button").innerHTML = "Switch to Dyslexic Font";
+	}
+});
+</script>
 
 {% endblock %}
